update function: login by google, facebook

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,15 @@ spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 server.servlet.contextPath=/BlogIT
+
+google.app.id=429606367649-fakrssn80s85dqp2j1o6o439dsifrolt.apps.googleusercontent.com
+google.app.secret=5WfS-7o5dCrpVMtoHEi_Qu1m
+google.redirect.uri=http://localhost:8080/BlogIT/auth/google
+google.link.get.token=https://accounts.google.com/o/oauth2/token
+google.link.get.user_info=https://www.googleapis.com/oauth2/v1/userinfo?access_token=
+
+# config facebook social
+facebook.app.id=383910079505656
+facebook.app.secret=376c7edd5d455b925220a3123a6dbb2e
+facebook.redirect.uri=http://localhost:8080/BlogIT/auth/facebook
+facebook.link.get.token=https://graph.facebook.com/oauth/access_token?client_id=%s&client_secret=%s&redirect_uri=%s&code=%s
