--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,10 @@
             <artifactId>restfb</artifactId>
             <version>3.13.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
