--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,20 @@ facebook.app.id=383910079505656
 facebook.app.secret=376c7edd5d455b925220a3123a6dbb2e
 facebook.redirect.uri=http://localhost:8080/BlogIT/auth/facebook
 facebook.link.get.token=https://graph.facebook.com/oauth/access_token?client_id=%s&client_secret=%s&redirect_uri=%s&code=%s
+
+spring.mail.host = smtp.gmail.com
+spring.mail.port = 587
+spring.mail.username = namtpde140009@fpt.edu.vn
+spring.mail.password= Nama3k67
+
+#Other properties
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+#TLS, port 587
+spring.mail.properties.mail.smtp.starttls.enable=true
+#SSL, post 465
+#spring.mail.properties.mail.smtp.socketFactory.port = 465
+#spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
