--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,7 @@ facebook.link.get.token=https://graph.facebook.com/oauth/access_token?client_id=
 spring.mail.host = smtp.gmail.com
 spring.mail.port = 587
 spring.mail.username = namtpde140009@fpt.edu.vn
-spring.mail.password= Nama3k67
+spring.mail.password= *****
 
 #Other properties
 spring.mail.properties.mail.smtp.auth=true
