customize error message when login

--- a/src/main/resources/myMessage.properties
+++ b/src/main/resources/myMessage.properties
@@ -1,2 +1,2 @@
-AbstractUserDetailsAuthenticationProvider.badCredentials=AbstractUserDetailsAuthenticationProvider.badCredentials=Invalid username or password
-AbstractUserDetailsAuthenticationProvider.disabled=Your account is disabled, please contact administrator.
+AbstractUserDetailsAuthenticationProvider.badCredentials=Invalid username or password
+AbstractUserDetailsAuthenticationProvider.disabled=Your account is disabled, please confirm your email. 
